Successfully customized pivot table format

--- a/assets/01_custom.css
+++ b/assets/01_custom.css
@@ -16,3 +16,13 @@ float: left;
     border-radius: 4px !important;
     box-shadow: 0 2px 4px rgba(0,0,0,0.2) !important;
 }
+
+.info-tooltip {
+    font-family: 'Open Sans', sans-serif !important;
+    font-weight: 600 !important;
+    padding: 8px !important;
+    background: white !important;
+    border: 1px solid #666 !important;
+    border-radius: 4px !important;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2) !important;
+}
